--- a/index.html
+++ b/index.html
@@ -29,5 +29,58 @@
       <p class="no-margin">Aprende de los mejores expertos con las mejores recetas y consejos</p>
     </div>
   </header>
+  <div class="contenedor contenido-principal">
+    <main class="blog">
+      <h3>Nuestro Blog</h3>
+      <article class="entrada">
+        <div class="entrada__imagen">
+          <img src="img/blog1.jpg" alt="imagen blog">
+        </div>
+        <div class="entrada__contenido">
+          <h4 class="no-margin">Tipos de Grano de Café</h4>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro iure aliquam similique aspernatur accusamus temporibus consequatur quos officia dignissimos recusandae aliquid animi, maxime voluptatibus dolorum praesentium? Eveniet sunt obcaecati hic!
+            Unde dolorem, illo iusto eligendi nulla laudantium odio officiis dolore exercitationem provident fugit laborum architecto, aliquam veritatis deleniti consequatur nesciunt temporibus vero. Amet nemo laborum ducimus quas eaque, dignissimos sequi.
+            Illum doloribus cupiditate rerum, molestiae adipisci voluptas dolorem expedita facilis? Delectus eos architecto praesentium maxime enim iure placeat asperiores alias minima. Natus eligendi aliquid provident. Laborum quisquam rem sapiente aut.
+            Harum, nam. Provident veritatis praesentium obcaecati vitae. Ratione doloremque sapiente tempora itaque? Similique harum doloremque in debitis dolore a quae nobis, tenetur maiores sapiente perferendis commodi! Corrupti ratione dicta excepturi.
+          </p>
+          <a href="entrada.html" class="boton boton--primario">Leer Entrada</a>
+        </div>
+      </article>
+      <article class="entrada">
+        <div class="entrada__imagen">
+          <img src="img/blog2.jpg" alt="imagen blog">
+        </div>
+        <div class="entrada__contenido">
+          <h4 class="no-margin">3 Deliciosas Recetas de Café</h4>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro iure aliquam similique aspernatur accusamus temporibus consequatur quos officia dignissimos recusandae aliquid animi, maxime voluptatibus dolorum praesentium? Eveniet sunt obcaecati hic!
+            Unde dolorem, illo iusto eligendi nulla laudantium odio officiis dolore exercitationem provident fugit laborum architecto, aliquam veritatis deleniti consequatur nesciunt temporibus vero. Amet nemo laborum ducimus quas eaque, dignissimos sequi.
+            Illum doloribus cupiditate rerum, molestiae adipisci voluptas dolorem expedita facilis? Delectus eos architecto praesentium maxime enim iure placeat asperiores alias minima. Natus eligendi aliquid provident. Laborum quisquam rem sapiente aut.
+            Harum, nam. Provident veritatis praesentium obcaecati vitae. Ratione doloremque sapiente tempora itaque? Similique harum doloremque in debitis dolore a quae nobis, tenetur maiores sapiente perferendis commodi! Corrupti ratione dicta excepturi.
+          </p>
+          <a href="entrada.html" class="boton boton--primario">Leer Entrada</a>
+        </div>
+      </article>
+      <article class="entrada">
+        <div class="entrada__imagen">
+          <img src="img/blog3.jpg" alt="imagen blog">
+        </div>
+        <div class="entrada__contenido">
+          <h4 class="no-margin">Beneficios del Café</h4>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro iure aliquam similique aspernatur accusamus temporibus consequatur quos officia dignissimos recusandae aliquid animi, maxime voluptatibus dolorum praesentium? Eveniet sunt obcaecati hic!
+            Unde dolorem, illo iusto eligendi nulla laudantium odio officiis dolore exercitationem provident fugit laborum architecto, aliquam veritatis deleniti consequatur nesciunt temporibus vero. Amet nemo laborum ducimus quas eaque, dignissimos sequi.
+            Illum doloribus cupiditate rerum, molestiae adipisci voluptas dolorem expedita facilis? Delectus eos architecto praesentium maxime enim iure placeat asperiores alias minima. Natus eligendi aliquid provident. Laborum quisquam rem sapiente aut.
+            Harum, nam. Provident veritatis praesentium obcaecati vitae. Ratione doloremque sapiente tempora itaque? Similique harum doloremque in debitis dolore a quae nobis, tenetur maiores sapiente perferendis commodi! Corrupti ratione dicta excepturi.
+          </p>
+          <a href="entrada.html" class="boton boton--primario">Leer Entrada</a>
+        </div>
+      </article>
+    </main>
+    <aside class="sidebar">
+      <h3>Nuestros Cursos y Talleres</h3>
+    </aside>
+  </div>
 </body>
 </html>
