--- a/contacto.html
+++ b/contacto.html
@@ -30,20 +30,25 @@
     </div>
   </header>
   <main class="contenedor">
-      <h3 class="centrar-texto">Sobre Nosotros</h3>
-      <div class="sobre-nosotros">
-        <div class="sobre-nosotros__imagen">
-          <img src="img/nosotros.jpg" alt="imagen nosotros">
+      <h3 class="centrar-texto">Contacto</h3>
+      <div class="contacto-bg"></div>
+      <form class="formulario">
+        <div class="campo">
+          <label class="campo__label" for="nombre">Nombre</label>
+          <input class="campo__field" type="text" placeholder="Tu Nombre" id="nombre">
         </div>
-        <div class="sobre nosotros__texto">
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil assumenda cumque aperiam error perspiciatis voluptate, commodi iste similique vitae omnis, iusto aut sequi obcaecati consectetur sint! Sint sequi ex a?
-            Corporis corrupti voluptas id at doloribus quisquam sapiente, ratione dignissimos laborum, doloremque quibusdam ut sint architecto illum atque nihil numquam aut. Culpa veniam maxime ipsam dolorum eius hic nam natus?
-            Vero, eaque ullam corrupti sapiente est alias praesentium, enim, consequuntur dolores culpa animi. Laudantium magni quae recusandae dignissimos nobis. Quibusdam quia quisquam qui porro facilis mollitia ut perferendis aliquam repudiandae.
-            Ipsum earum quidem vitae, perspiciatis, soluta delectus error alias, eaque ducimus pariatur temporibus laborum velit quaerat voluptate! Quis ducimus suscipit, quia itaque eligendi, fugit nihil maxime dolorum voluptatum quos ullam?
-          </p>
+        <div class="campo">
+          <label class="campo__label" for="email">E-mail</label>
+          <input class="campo__field" type="email" placeholder="Tu Email" id="email">
         </div>
-      </div>
+        <div class="campo">
+          <label class="campo__label" for="mensaje">Mensaje</label>
+          <textarea class="campo__field campo__field--textarea" id="mensaje"></textarea>
+        </div>
+        <div class="campo">
+          <input type="submit" value="Enviar" class="boton boton--primario">
+        </div>
+      </form>
     </main>
   <footer class="footer">
     <div class="contenedor">
