--- a/index.html
+++ b/index.html
@@ -4,10 +4,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>BlogDeCafé</title>
-  <link rel="preload" href="css/style.css">
+
+  <!-- Prefetch-->
+  <link rel="prefetch" href="nosotros.html" as="document">
+
+  <!-- Preload -->
+  <link rel="preload" href="css/style.css" as="style">
   <link rel="stylesheet" href="css/style.css">
-  <link rel="preload" href="css/normalize.css">
+
+  <link rel="preload" href="css/normalize.css" as="style">
   <link rel="stylesheet" href="css/normalize.css">
+  
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" as="font" crossorigin="crossorigin">
   <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -34,7 +42,7 @@
       <h3>Nuestro Blog</h3>
       <article class="entrada">
         <div class="entrada__imagen">
-          <img src="img/blog1.jpg" alt="imagen blog">
+          <img loading="lazy" src="img/blog1.jpg" alt="imagen blog">
         </div>
         <div class="entrada__contenido">
           <h4 class="no-margin">Tipos de Grano de Café</h4>
@@ -49,7 +57,7 @@
       </article>
       <article class="entrada">
         <div class="entrada__imagen">
-          <img src="img/blog2.jpg" alt="imagen blog">
+          <img loading="lazy" src="img/blog2.jpg" alt="imagen blog">
         </div>
         <div class="entrada__contenido">
           <h4 class="no-margin">3 Deliciosas Recetas de Café</h4>
@@ -64,7 +72,7 @@
       </article>
       <article class="entrada">
         <div class="entrada__imagen">
-          <img src="img/blog3.jpg" alt="imagen blog">
+          <img loading="lazy" src="img/blog3.jpg" alt="imagen blog">
         </div>
         <div class="entrada__contenido">
           <h4 class="no-margin">Beneficios del Café</h4>
